--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-websocket": "^2.0.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.1.1",
     "superagent": "^3.8.3"
   },
   "scripts": {
